# flight_scans

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  MIGRATION-NOTES.md  README.md  migrate_to_turso.py  probe_googleflights_playwright.py  probe_new_sources.py  probe_skyscanner.py  pyproject.toml  requirements.txt  run_batch.py  run_scan.py  start_ui.bat  tracker.py
.streamlit/: config.toml  secrets.toml.example
docs/: DESIGN.md  ENGINE.md
lib/: alerts.py  api.py  aviasales_api.py  clients.py  confidence.py  config.py  credentials.py  db.py  flights_sky.py  followup.py  googleflights_direct.py  health.py  kiwi_rapidapi.py  planner.py  quota.py  report.py  route_store.py  runner.py  scanops.py  searchapi_io.py  serpapi_io.py  skyscanner_rapidapi.py  sources.py  sweep.py  turso_http.py
routes/: spain-nairobi.yaml
scripts/: gen_estimator_fixture.py  notify_ntfy.py  probe_googleflights_ci.py  probe_ledger_cas.py  render_summary.py  set_ci_secrets.py
tests/: conftest.py  test_alerts.py  test_api_parsing.py  test_aviasales_parsing.py  test_confidence.py  test_config.py  test_config_roundtrip.py  test_db.py  test_db_migration.py  test_flights_sky_parsing.py  test_followup_selection.py  test_googleflights_parsing.py  test_health.py  test_kiwi_parsing.py  test_notify_health.py  test_planner.py  test_quota.py  test_route_store.py  test_serpapi_parsing.py  test_skyscanner_parsing.py  test_sources.py  test_sweep_geometry.py  test_sweep_planning.py  test_sweep_skip.py  test_ui_helpers.py
ui/: _common.py  app.py
web/: design-system.html  estimator-fixture.json  (+2 more)
(+75 files in other folders)
